_custom/css/player.css
/* CUSTOM PLAYER (to be integrated as CodeSnippet) */

#VideoPlayer ::after, #VideoPlayer ::before {
	-moz-box-sizing: initial;
	box-sizing: initial;
}

.frametrail-body .mainContainer ::before, 
.frametrail-body .mainContainer ::after, 
.frametrail-body .ui-resizable-handle {
	-moz-box-sizing: unset;
	box-sizing: unset;
}

.frametrail-body .ui-tabs-panel {
	-moz-box-sizing: inherit;
	box-sizing: inherit;
}



body.userinactive .mainContainer:not(.editActive) .playerContainer #playCircleContainer, 
body.userinactive #ftPointer,
body.userinactive #fthypervideo .ftNavigation,
body.userinactive #fthypervideo .ftNavCooperation,
body.userinactive #fthypervideo .ftAboutIconContainer {
    display: block;
    visibility: hidden;
    opacity: 0;
    -webkit-transition: visibility 1.5s, opacity 1.5s;
     -moz-transition: visibility 1.5s, opacity 1.5s;
      -ms-transition: visibility 1.5s, opacity 1.5s;
       -o-transition: visibility 1.5s, opacity 1.5s;
          transition: visibility 1.5s, opacity 1.5s;
}

.editPropertiesContainer .overlayOptionsTabs .message {
	width: 360px;
}

#VideoPlayer .playerContainer #playCircleContainer {
	position: absolute;
	top: 50%;
	left: 25%;
	margin-top: -90px;
	margin-left: -90px;
	width: 180px;
	height: 180px;
	text-align: center;
	font-size: 2em;
	z-index: 30;
	color: #fec570;
	border-radius: 100%;
	background: url('../../_data/resources/1_1556104792_icon-play.svg') no-repeat center center;
	background-size: 25px;
	cursor: pointer;
}

.mainContainer.editActive #playCircleContainer {
	display: none;
}

#VideoPlayer .playerContainer #playCircleContainer.playing {
	background-image: url('../../_data/resources/1_1556104813_icon-pause.svg')
}

#VideoPlayer .playerContainer #playCircleContainer .fticon-right, #VideoPlayer .playerContainer #playCircleContainer svg {
	position: absolute;
	top: 0;
	right: 0;
	bottom: 0;
	left: 0;
	line-height: 180px;
}

#VideoPlayer .playerContainer #playCircleContainer svg > .circle {
	fill: transparent !important;
	stroke: #fec570;
	stroke-width: 3;
	stroke-dasharray: 900;
	transition-duration: 0ms !important;
	/* firefox bug fix - won't rotate at 90deg angles */
	transform: rotate(-90deg) translateX(-179px);
	-moz-transform: rotate(-90deg) translateX(-179px);
}

#VideoPlayer .playerContainer #playCircleContainer svg > .circle-bg {
	fill: transparent !important;
	stroke: #FFFFFF;
	stroke-width: 2;
	stroke-dasharray: none;
	transition-duration: 0ms !important;
	/* firefox bug fix - won't rotate at 90deg angles */
	transform: rotate(-90deg) translateX(-179px);
	-moz-transform: rotate(-90deg) translateX(-179px);
	opacity: .5;
}

.hypervideoContainer .videoContainer .hypervideo .captionContainer {
	position: fixed !important;
}

.mainContainer.editActive .hypervideoContainer .videoContainer .hypervideo .captionContainer {
	display: none !important;
}

.hypervideoContainer .videoContainer .hypervideo .captionContainer .subtitleElement {
	margin: 16px 50px;
}

#VideoPlayer .message.statusMessage.active {
	display: none !important;
}

#VideoPlayer .message.statusMessage.active.error {
	top: 0px;
	display: block !important;
}

#VideoPlayer .titlebarViewMode {
	display: none !important;
}

#VideoPlayer .titlebar:not(.editActive) {
	position: absolute;
	top: 0px;
	left: 0px;
	flex: none;
	height: 23px;
	background: var(--secondary-bg-color);
}

#VideoPlayer .titlebar:not(.editActive) .titlebarTitle {
	line-height: 20px;
	font-size: 13px;
}

#VideoPlayer .titlebar:not(.editActive) .titlebarActionButtonContainer, 
#VideoPlayer .sharingWidget, 
#VideoPlayer .titlebar .leaveEditModeButton,
#VideoPlayer .controls .rightControlPanel {
	display: none !important;
}

#VideoPlayer .sidebarContainer {
	margin-top: 54px;
}

#VideoPlayer .titlebarViewMode {
	margin-left: 164px;
}

#VideoPlayer .ui-tabs .ui-tabs-nav li a, #VideoPlayer .ui-tabs .ui-tabs-nav .ui-tabs-anchor {
	padding: 2px 4px;
}

#VideoPlayer .mainContainer:not([data-edit-mode="overlays"]):not([data-edit-mode="codesnippets"]):not([data-edit-mode="annotations"]) .playerContainer .ui-slider-handle-circle {
	display: none;
}

#VideoPlayer .mainContainer:not([data-edit-mode="overlays"]):not([data-edit-mode="codesnippets"]):not([data-edit-mode="annotations"]) .playerContainer .controls {
	position: absolute;
	flex: none;
	bottom: 0px;
	height: 20px;
	min-height: 0;
	display: none;
}

#VideoPlayer .mainContainer:not([data-edit-mode="overlays"]):not([data-edit-mode="codesnippets"]):not([data-edit-mode="annotations"]) .playerContainer .controls .playButton {
	height: 20px;
	width: 30px;
	margin-left: -5px;
}

#VideoPlayer .mainContainer:not([data-edit-mode="overlays"]):not([data-edit-mode="codesnippets"]):not([data-edit-mode="annotations"]) .playerContainer .controls .playButton [class^="icon-"]::before {
	font-size: 15px;
	margin-top: -10px;
}

#VideoPlayer .mainContainer:not([data-edit-mode="overlays"]):not([data-edit-mode="codesnippets"]):not([data-edit-mode="annotations"]) .playerContainer .controls .timeDisplay div {
	float: left;
	margin-top: -3px;
	margin-left: 3px;
}

#VideoPlayer .mainContainer:not([data-edit-mode="overlays"]):not([data-edit-mode="codesnippets"]):not([data-edit-mode="annotations"]) .playerContainer .controls .timeDisplay div.totalDuration {
	display: none;
}


#VideoPlayer .mainContainer:not([data-edit-mode="overlays"]):not([data-edit-mode="codesnippets"]):not([data-edit-mode="annotations"]) .hypervideoContainer {
	margin-bottom: 0px;
}

#VideoPlayer .videoStartOverlay {
	display: none !important;
}

#VideoPlayer .mainContainer:not(.editActive) .viewOverview {
	display: none !important;
}

#VideoPlayer .mainContainer:not(.editActive) .viewVideo {
	display: block !important;
}

/* buttons */

#VideoPlayer button, #VideoPlayer input[type="submit"], #VideoPlayer input[type="button"], #VideoPlayer .button {
	/*font-family: 'Rubik', sans-serif;*/
	font-family: 'Inconsolata', monospace;
	letter-spacing: -0.9px;
	text-transform: inherit;
}

#VideoPlayer input[type="text"], #VideoPlayer input[type="password"], #VideoPlayer textarea {
	font-family: 'Inconsolata', monospace;
	letter-spacing: 0px;
}

/* Inside Hypervideo */
.hypervideo .video {
	-webkit-transform: translate3d(0,0,0);
    -moz-transform: translate3d(0,0,0);
    -ms-transform: translate3d(0,0,0);
    transform: translate3d(0,0,0);
    backface-visibility: hidden;
    will-change: filter;
    transition-duration: 1s;
}

.hypervideo .video.nocolor {
	
}

.hypervideo .video.dark {
	
}

.overlayContainer .overlayElement {
	opacity: 0;
	visibility: visible;
	pointer-events: none;
	transition-property: opacity;
	transition-duration: 800ms;
}

.overlayContainer .overlayElement.active {
	opacity: 1;
	pointer-events: all;
}

.overlayElement .resourceDetail {
	transform-origin: center;
}

.overlayElement .resourceDetail[data-type="text"] * {
	color: #ffffff !important;
	font-size: 1vw;
	background: rgba(0,0,0,.45);
	padding: 1vw;
	letter-spacing: 0;
	line-height: 1.15em;
}

.overlayElement .resourceDetail[data-type="image"] img {
	-webkit-transform: translate3d(0,0,0);
    -moz-transform: translate3d(0,0,0);
    -ms-transform: translate3d(0,0,0);
    transform: translate3d(0,0,0);
    backface-visibility: hidden;
    will-change: scale;
	transform: scale(0.8, 0.8);
	transform-origin: center bottom;
	transition-property: all;
	transition-duration: 300ms;
}

.overlayElement .resourceDetail[data-type="image"] img:hover {
	cursor: pointer;
  	transform: scale(1,1);
}

.overlayElement svg {
	top: 10px;
	left: 10px;
  	width: calc(100% - 20px);
}

.overlayElement svg {
	position: absolute;
	z-index: 11;
	overflow: visible !important;
	transition-property: all;
	transition-duration: 1300ms;
	pointer-events: none;
}

.overlayElement svg.centered {
	position: absolute;
	top: 50% !important;
	left: 50% !important;
	margin-top: -30px;
	margin-left: -30px;
	width: 65px !important;
	height: 65px !important;
	-webkit-animation: spin 2s linear infinite;
    -moz-animation: spin 2s linear infinite;
    animation: spin 2s linear infinite;
    animation-delay: 1s
}

.overlayElement svg.centered polygon {
	width: 100% !important;
	height: 100% !important;
}

@-moz-keyframes spin { 100% { -moz-transform: rotate(360deg); } }
@-webkit-keyframes spin { 100% { -webkit-transform: rotate(360deg); } }
@keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }

.overlayElement .resourceDetail[data-type="image"] svg path, .overlayElement .resourceDetail[data-type="image"] svg polygon {
	stroke: #fff;
	stroke-miterlimit: 1;
	stroke-width: 2px;
	transition-property: fill, opacity;
	transition-duration: 800ms;
	pointer-events: none;
}

.overlayElement svg.active {
	pointer-events: all;
}

.overlayElement svg.active path, .overlayElement svg.active polygon {
	opacity: 1;
	pointer-events: all;
}

.overlayElement svg.active path:hover, .overlayElement svg.active polygon:hover {
	cursor: pointer;
	fill: rgba(255,255,255,.4);
}

#transitionContainer {
	position: absolute;
	top: 0px;
	left: 0px;
	width: 100%;
	height: 100%;
	opacity: 0;
	z-index: 10;
	pointer-events: none;
	transition-property: opacity;
	transition-duration: 1s;
	background: rgba(0,0,0,.8);
}

#transitionContainer.active {
	opacity: 1;
	pointer-events: all;
}

#transitionContainer audio {
	position: absolute;
}

.transitionCanvas {
	position: absolute;
	width: 100%;
	height: 100%;
	display: none;
}

.transitionCanvas svg {
	position: absolute;
	top: 0px;
	left: 0px;
}

.continueButton {
	position: absolute;
	bottom: -60px;
	right: 20px;
	width: 70px;
	height: 34px;
	transition-property: all;
	transition-duration: 800ms;
	background: transparent;
	z-index: 14;
	opacity: 0;
	pointer-events: none;
}

.continueButton svg, .continueButton svg polygon {
	opacity: 1;
	stroke-width: 1px;
}

.continueButton span {
	position: absolute;
	color: #fff;
	top: 0px;
	left: 0px;
	width: 100%;
	text-align: center;
	font-size: 26px;
	line-height: 30px;
}

.continueButton.active {
	bottom: 20px;
	opacity: 1;
	pointer-events: all;
}

.continueButton.active:hover {
	cursor: pointer;
	background: rgba(255,255,255,.4);
}

/*
.continueButton.full {
	bottom: 0px;
	right: 0px;
	width: 100%;
	height: 100%;
}

.continueButton.full:hover {
	background:transparent;
}

.continueButton.full span {
	opacity: 0;
}
*/

/* IE fix */
.hypervideoContainer .videoContainer {
  min-height: 100vh !important;
}

